# fragment_feature_detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
fragment_feature_detection/: cli.py  config.ini  config.py  converter.py  decomposition.py  discretization.py  fitpeaks.py  gpfwindow.py  simulation.py  utils.py
fragment_feature_detection/containers/: __init__.py  gpfrun.py  ms1feature.py  msrun.py  scanwindow.py
nmf_fragment_decomposition/: config.py  decomposition.py  discretization.py  fitpeaks.py  gpfwindow.py  utils.py
